# ma_blog_yew

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  Trunk.toml  index.html  style.css  style.min.css
src/: layout.rs  main.rs  routes.rs
src/api/: api.rs  mod.rs
src/components/: loading.rs  mod.rs  navbar.rs  pagelayout.rs
src/models/: models.rs
src/pages/: about.rs  home.rs  mod.rs
src/utils/: vars.rs
