[package]
name = "wasm-yew"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlMetaElement",   
    "Node"
] }
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
