[package]
name = "wasm-yew"
version = "0.1.0"
edition = "2021"

[dependencies]
# Yew itself
yew = "0.21"
yew-router = "0.18"

# yew-hooks version that targets Yew 0.21
yew-hooks = "0.3.1"

# WASM support
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4"

# Networking + serialization
gloo-net = "0.4"
serde = { version = "1.0", features = ["derive"] }

# Debugging
console_error_panic_hook = "0.1.7"

# Ensure indexmap v2.x so Yew’s implicit‐clone conversions work
indexmap = "2.9.0"

